--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charser="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MHD_KAMIL</title>
-    <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <div class="game-board"
-             <img src="./images/mario.gif" alt="mario" class="mario">
-             <img src="./images/pipe.png"  alt="pipe"  class="pipe">
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Mario Game</title>
 
+
+   <link rel="stylesheet" href="./css/style.css">
+   <script src="./js/script.js"></script>
+</head>
+<body>
+
+    <div class="game-board"> 
+        <img src="./images/pipe.png" alt="pipe" class="pipe">
+        <img src="./images/mario.gif" alt="mario" class="mario">
+        <img src="./images/clouds.png" alt="clouds" class="clouds">
+       
     </div>
-    <script src="./js/script.js"></script>
+
+
+ 
 </body>
 </html>
